[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/karya1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/karya1_btn.gd" type="Script" id=2]
[ext_resource path="res://Scripts/karya1_check_btn.gd" type="Script" id=3]

[node name="Karya1" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="KaryaLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="FnLinear" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 1 )

[node name="FnKuadratik" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 1 )

[node name="FnKubik" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 1 )

[node name="FnAbsolute" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 1 )

[node name="BtnNext" type="Button" parent="KaryaLayer"]
margin_left = 678.0
margin_top = 1.0
margin_right = 720.0
margin_bottom = 21.0
text = "Next"
script = ExtResource( 2 )

[node name="BtnPrev" type="Button" parent="KaryaLayer"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 21.0
text = "Prev"
script = ExtResource( 2 )

[node name="HelperLayer" type="CanvasLayer" parent="KaryaLayer"]

[node name="BtnMargin" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_top = 438.0
margin_right = 76.0
margin_bottom = 478.0
text = "Margin"
script = ExtResource( 3 )

[node name="BtnGrid" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_left = 123.0
margin_top = 438.0
margin_right = 230.0
margin_bottom = 478.0
text = "Grid"
script = ExtResource( 3 )

[node name="BtnKartesian" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_left = 230.0
margin_top = 438.0
margin_right = 369.0
margin_bottom = 478.0
text = "Kartesian"
script = ExtResource( 3 )

[node name="BtnBack" type="Button" parent="KaryaLayer/HelperLayer"]
margin_left = 676.0
margin_top = 449.0
margin_right = 718.0
margin_bottom = 469.0
text = "Back"
script = ExtResource( 2 )

[node name="Margin" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 1 )

[node name="Grid" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 1 )

[node name="Kartesian" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 1 )

[connection signal="draw" from="KaryaLayer/FnLinear" to="KaryaLayer/FnLinear" method="_draw_linear"]
[connection signal="draw" from="KaryaLayer/FnKuadratik" to="KaryaLayer/FnKuadratik" method="_draw_kuadratik"]
[connection signal="draw" from="KaryaLayer/FnKubik" to="KaryaLayer/FnKubik" method="_draw_kubik"]
[connection signal="draw" from="KaryaLayer/FnAbsolute" to="KaryaLayer/FnAbsolute" method="_draw_absolute"]
[connection signal="pressed" from="KaryaLayer/BtnNext" to="KaryaLayer/BtnNext" method="_on_BtnNext_pressed"]
[connection signal="pressed" from="KaryaLayer/BtnPrev" to="KaryaLayer/BtnPrev" method="_on_BtnPrev_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnMargin" to="KaryaLayer/HelperLayer/BtnMargin" method="_on_BtnMargin_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnGrid" to="KaryaLayer/HelperLayer/BtnGrid" method="_on_BtnGrid_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnKartesian" to="KaryaLayer/HelperLayer/BtnKartesian" method="_on_BtnKartesian_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnBack" to="KaryaLayer/HelperLayer/BtnBack" method="_on_BtnBack_pressed"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Margin" to="KaryaLayer/HelperLayer/Margin" method="_draw_margin"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Grid" to="KaryaLayer/HelperLayer/Grid" method="_draw_grid"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Kartesian" to="KaryaLayer/HelperLayer/Kartesian" method="_draw_kartesian"]
